# INTERACTIVE-COMPUTER-GRAPHICS-CS-GY-6533-2020-FALL

./: README.md
Assignment_1/: README.md
Assignment_1/1st_test_multi_type_io/PPM_P3_io/: compile-win.bat  gamma_corrected25.ppm  gamma_corrected25x2.ppm  gamma_corrected4.ppm  myProgram  ppm.cpp
Assignment_1/1st_test_multi_type_io/PPM__P6_io/: compile.sh  gamma_corrected25x2.ppm  gamma_corrected4.ppm  myProgram  ppm  ppm_p6.cpp
Assignment_1/1st_test_multi_type_io/PPM_multi_version_io/: compile.sh  lena_gray.ppm  myProgram  ppm_P3_p6.cpp  ppm_multi_version.cpp
Assignment_1/1st_test_multi_type_io/PPM_multi_version_io/P3/: gamma_corrected25.ppm  gamma_corrected25x2.ppm  gamma_corrected4.ppm
Assignment_1/1st_test_multi_type_io/PPM_multi_version_io/P5/: gamma_corrected25.pgm  gamma_corrected25x2.pgm  gamma_corrected4.pgm
Assignment_1/2nd_implement_image_class/Solution_Implementing_Class/: CMakeLists.txt
Assignment_1/2nd_implement_image_class/Solution_Implementing_Class/src/: Image.cpp  Image.h  Source.cpp
Assignment_1/Assignment_1_solution/: Assignment_1_solution.sln  Assignment_1_solution.vcxproj  Assignment_1_solution.vcxproj.filters  Source.cpp
Assignment_1/Assignment_1_solution/Debug/: Assignment_1_solution.ilk  image.obj.enc  source.new.obj.enc  vc142.idb
Assignment_1/Assignment_1_solution/back_up/: Image.cpp  Image.h  Source.cpp
Assignment_1/Assignment_1_solution/test_images/: lena_color.ppm
Assignment_1/sub_final/src/: Image.cpp  Image.h  Source.cpp
Class_exercise_1_gamma_correction/: README.tex  compile.sh
General_Rules/: General_Rules.tex
(+8 files in other folders)
